@@ -12,7 +12,8 @@ EXAMPLES
         -------------------------------------------------------------------
         explode(" ab cd ef ", " ")  ({ "", "ab", "cd", "ef", "" })
         explode("abc", "abc")       ({ "", "" })
-        explode("", "")             ({})
+        explode("", "")             ({ "" })
+        explode("", <whatever>)     ({ "" })
         explode("abc", "xyz")       ({ "abc" })
         explode("abc", "")          ({ "a", "b", "c" })
 
@@ -22,6 +23,8 @@ HISTORY
         instead of ({ "", "ab", "cd", "ef", "" }), i. e. the empty strings
         were ignored. The new behaviour is more consistent, because now
         implode(explode(str, del), del) == str is always true.
+        Since 3.5.0 explode("","") returns ({""}), so it is guaranteed to
+        return a non-empty array.
 
 SEE ALSO
         sscanf(E), extract(E), implode(E), regexplode(E)
